# itasca-mcp-pfc5.00

./: .gitignore  CHANGELOG.md  LICENSE  README.md  addon.py
bridge/: pyproject.toml  setup.py
bridge/itasca_mcp_bridge/: __init__.py  __main__.py  _compat.py  announce.py  runtime.py  server.py  upgrade.py
bridge/itasca_mcp_bridge/execution/: __init__.py  main_thread.py  script.py  snippet.py  termination.py
bridge/itasca_mcp_bridge/handlers/: __init__.py  context.py  exec_strategy.py  execute_code.py  helpers.py  tasks.py
bridge/itasca_mcp_bridge/signals/: __init__.py  cycle_executor.py  interrupt.py  positions.py
bridge/itasca_mcp_bridge/tasks/: __init__.py  manager.py  task.py
bridge/itasca_mcp_bridge/utils/: __init__.py  command_log.py  command_splitter.py  file_buffer.py  path_utils.py  response.py  safe_logging.py
docs/: porting-notes.md
docs/agentic/: itasca-mcp-pfc5-bootstrap.md
knowledge/resources/pfc/command_docs/: index.json
knowledge/resources/pfc/command_docs/commands/: call.json  calm.json  clean.json  config.json  contact_history.json  continue.json  cycle.json  define.json  domain.json  echo.json  end.json  exit.json  fish.json  gui.json  heading.json  help.json  list.json  load.json  mail.json  new.json  pause.json  playback.json  plot.json  quit.json  restore.json  return.json  save.json  set.json  solve.json  step.json  stop.json  system.json  title.json  undo.json
knowledge/resources/pfc/references/: index.json
patches/itasca-mcp/: client.py.trust_env.patch
patches/mcp-server/: pfc5-knowledge.md
scripts/: run_itasca_mcp.py
(+110 files in other folders)
