[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "itasca-mcp-bridge"
version = "0.4.1-pfc5"
description = "PFC 5.0 compatible HTTP bridge for ITASCA codes - a backport of itasca-mcp-bridge"
authors = [
    {name = "Yusong Han", email = "yusong.han.652@gmail.com"},
    {name = "itasca-mcp-pfc5 contributors"},
]
license = {text = "MIT"}
requires-python = ">=2.7"
keywords = ["pfc", "itasca", "mcp", "bridge", "pfc5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yusong652/itasca-mcp"
"PFC 5.0 Fork" = "https://github.com/<your-org>/itasca-mcp-pfc5"
